# pico-auth

./: .coveragerc  .dockerignore  .gitignore  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  Dockerfile.test  Dockerfile.test.dockerignore  MANIFEST.in  Makefile  README.md  SECURITY.md  application.yaml  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml  publish-to-docker.yml  publish-to-pypi.yml
docs/: api-endpoints.md  api-reference.md  architecture.md  auth-flow.md  configuration.md  docker-e2e-test.md  ecosystem.md  faq.md  getting-started.md  index.md  skills.md
docs/javascripts/: extra.js
pico_auth/: __init__.py  _version.py  config.py  errors.py  jwt_provider.py  local_auth_configurer.py  local_jwks_provider.py  main.py  models.py  passwords.py  repository.py  routes.py  schema.py  service.py
releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md
tests/: conftest.py  test_auth_e2e.py  test_coverage_gaps.py  test_docker_e2e.py  test_email_credentials.py  test_jwt_provider_pqc.py
