[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-auth"
dynamic = ["version"]
description = "Minimal JWT auth server for the pico ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "David Perez" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pico-ioc[yaml]>=2.2.4",
    "pico-boot>=0.1.1",
    "pico-fastapi>=0.3.0",
    "pico-sqlalchemy>=0.3.0",
    "pico-client-auth>=0.3.0",
    "python-jose[cryptography]>=3.5",
    "bcrypt>=5.0",
    "aiosqlite>=0.22",
    "uvicorn[standard]>=0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "httpx>=0.28",
    "ruff",
    "tox",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
]

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-auth"
Documentation = "https://dperezcabrera.github.io/pico-auth/"
Repository = "https://github.com/dperezcabrera/pico-auth"
Issues = "https://github.com/dperezcabrera/pico-auth/issues"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "C901", "PLR1702"]
ignore = ["E501", "E701", "E731", "F401", "F811", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["pico_auth"]
omit = ["pico_auth/main.py"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.tox]
env_list = ["py311", "py312", "py313", "py314", "cov"]

[tool.tox.env_run_base]
deps = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "httpx>=0.28",
]
commands = [["pytest", "tests/", "-v"]]

[tool.tox.env.cov]
deps = [
    "{[env_run_base]deps}",
    "coverage[toml]",
]
commands = [
    ["coverage", "run", "-m", "pytest", "tests/", "-v"],
    ["coverage", "report", "-m"],
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.1.0"
write_to = "pico_auth/_version.py"
